# discobench

./: pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
discobench/: cli.py  create_task.py
discobench/tasks/ComputerVisionClassification/utils/: requirements.txt
discobench/tasks/LanguageModelling/utils/: requirements.txt
discobench/tasks/OffPolicyRL/: task_config.yaml
discobench/tasks/OffPolicyRL/templates/default/: main.py
discobench/tasks/OffPolicyRL/templates/default/base/: activation.py  networks.py  train.py
discobench/tasks/OffPolicyRL/templates/default/edit/: activation.py  networks.py  train.py
discobench/tasks/OffPolicyRL/utils/: task_information.yaml  task_spec.yaml
discobench/tasks/OnPolicyMARL/: task_config.yaml
discobench/tasks/OnPolicyMARL/datasets/MABrax/Ant/: description.md  make_env.py
discobench/tasks/OnPolicyMARL/datasets/MABrax/HalfCheetah/: description.md  make_env.py
discobench/tasks/OnPolicyMARL/datasets/MABrax/Hopper/: description.md  make_env.py
discobench/tasks/OnPolicyMARL/datasets/MABrax/Humanoid/: description.md  make_env.py
discobench/tasks/OnPolicyMARL/datasets/MABrax/Walker/: description.md  make_env.py
discobench/tasks/OnPolicyMARL/datasets/MPE/Spread/: description.md  make_env.py
discobench/tasks/OnPolicyMARL/datasets/SMAX/10m_vs_11m/: description.md  make_env.py
discobench/tasks/OnPolicyMARL/datasets/SMAX/27m_vs_30m/: description.md  make_env.py
discobench/tasks/OnPolicyMARL/datasets/SMAX/2s3z/: description.md  make_env.py
discobench/tasks/OnPolicyMARL/datasets/SMAX/3s5z/: description.md  make_env.py
discobench/tasks/OnPolicyMARL/datasets/SMAX/3s5z_vs_3s6z/: description.md  make_env.py
discobench/tasks/OnPolicyMARL/datasets/SMAX/3s_vs_5z/: description.md  make_env.py
discobench/tasks/OnPolicyMARL/datasets/SMAX/5m_vs_6m/: description.md  make_env.py
discobench/tasks/OnPolicyMARL/datasets/SMAX/6h_vs_8z/: description.md  make_env.py
discobench/tasks/OnPolicyMARL/datasets/SMAX/smacv2_10_units/: description.md  make_env.py
discobench/tasks/OnPolicyMARL/datasets/SMAX/smacv2_20_units/: description.md  make_env.py
discobench/tasks/OnPolicyMARL/datasets/SMAX/smacv2_5_units/: description.md  make_env.py
discobench/tasks/OnPolicyMARL/templates/default/: main.py
discobench/tasks/OnPolicyMARL/templates/default/base/: config.py  loss.py  networks.py  optim.py  train.py
discobench/tasks/OnPolicyMARL/templates/default/edit/: config.py  loss.py  networks.py  optim.py  train.py
discobench/tasks/OnPolicyMARL/templates/recurrent/: main.py
discobench/tasks/OnPolicyMARL/templates/recurrent/base/: config.py  loss.py  networks.py  train.py
discobench/tasks/OnPolicyMARL/templates/recurrent/edit/: config.py  loss.py  networks.py  train.py
discobench/tasks/OnPolicyMARL/utils/: _reference.txt  description.md  requirements.txt  task_information.yaml  task_spec.yaml
discobench/tasks/OnPolicyRL/: task_config.yaml
discobench/tasks/OnPolicyRL/datasets/Brax/Walker2D/: config.py
discobench/tasks/OnPolicyRL/datasets/Craftax/Craftax/: config.py
discobench/tasks/OnPolicyRL/datasets/Craftax/Craftax-Classic/: config.py
discobench/tasks/OnPolicyRL/datasets/MinAtar/Freeway/: config.py
discobench/tasks/OnPolicyRL/templates/default/: main.py
discobench/tasks/OnPolicyRL/templates/default/base/: activation.py  networks.py  targets.py  train.py
discobench/tasks/OnPolicyRL/templates/default/edit/: activation.py  networks.py  targets.py  train.py
discobench/tasks/OnPolicyRL/templates/recurrent/: main.py
discobench/tasks/OnPolicyRL/templates/recurrent/base/: networks.py  train.py
discobench/tasks/OnPolicyRL/templates/recurrent/edit/: networks.py  train.py
discobench/tasks/OnPolicyRL/templates/transformer/base/: networks.py
discobench/tasks/OnPolicyRL/templates/transformer/edit/: networks.py
discobench/tasks/OnPolicyRL/utils/: task_information.yaml  task_spec.yaml
discobench/utils/: get_domains.py  get_modules.py  make_files.py
